# swarm

./: .editorconfig  .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  README.md  Taskfile.yml
.claude/skills/swarm-check/: SKILL.md
.claude/skills/swarm-review/: SKILL.md
.claude/skills/swarm-sync/: SKILL.md
cli/: pyproject.toml
cli/src/swarm_cli/: __init__.py  main.py
cli/tests/: test_cli.py
dev/: docker-compose.yml
docs/: failure_modes_and_open_problems.md  storage_engine_spike.md  swarm_architecture_spec.md  system_architecture.md
docs/decisions/: 0001-model-residency-scheduler.md  0002-stigmergy-signal.md  0003-confidence-traversal-bounding.md  0004-graph-integrity-contract.md  0005-connector-ingestion-contract.md  0006-answer-result-algebra.md  0007-self-model-and-identity.md  0008-chat-persona-and-deflection.md  0009-backpressure-and-dlq.md  0010-trace-lifecycle-gc.md  0011-graph-zones-and-claim-typing.md  0012-coordination-control.md  0013-entity-resolution.md  0014-data-memory-model.md  README.md
docs/design/: answer-result-algebra.md  backpressure-and-dlq.md  chat-persona-and-deflection.md  confidence-saturation-spike.md  connector-ingestion.md  coordination-control.md  data-memory-model.md  dockerization-design.md  enrichment-control-plane.md  evidence-origin-substrate.md  graph-integrity-contract.md  graph-zones.md  llm-budget.md  model-residency-scheduler-spec.md  self-model-and-identity.md  stigmergy-signal.md  trace-lifecycle.md
docs/guides/: README.md  coding_guidelines.md  perf_guidelines.md
infra/: docker-compose.yml
kernel/: .dockerignore  Dockerfile  mix.exs
kernel/bench/: confidence_saturation.exs  trace_gc.exs
kernel/config/: config.exs  runtime.exs
kernel/lib/: swarm.ex
kernel/lib/swarm/: config.ex  (+10 more)
kernel/test/: swarm_test.exs  test_helper.exs
ml/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
ml/src/swarm_ml/: __init__.py  config.py  server.py
ml/tests/: test_server.py
proto/: core.proto  embed.proto
scripts/: env.sh  ollama_ask.sh  run_on_spark.sh  sync.sh
(+124 files in other folders)
