[project]
name = "swarm-ml"
version = "0.1.0"
description = "Swarm ML service: embeddings + model inference over gRPC (the Intelligence pillar)."
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.68",
    "protobuf>=5.28",
    "numpy>=2.0",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.68",
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "pytest>=8.3",
]

[project.scripts]
swarm-ml = "swarm_ml.server:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swarm_ml"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]
extend-exclude = ["src/swarm_ml/_gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
exclude = ["src/swarm_ml/_gen"]
